# simmr

./: Cargo.toml  Dockerfile  readme.md
.github/workflows/: docker.yml  unit-tests.yml
shared/: Cargo.toml
shared/src/: encoding.rs  util.rs
simmr/: Cargo.toml
simmr/src/: cli.rs  fastq.rs  files.rs  genome.rs  log.rs  main.rs  simulate.rs  util.rs
simmr/src/abundance_profiles/: base.rs  custom.rs  exact.rs  mod.rs  uniform.rs
simmr/src/error_profiles/: base.rs  custom_long.rs  custom_short.rs  minimal_long.rs  minimal_short.rs  mod.rs  perfect_long.rs  perfect_short.rs
simmr/src/tests/: abundance_profile_tests.rs  error_profile_tests.rs  genome_tests.rs  simulate_tests.rs  util_tests.rs
simmr/src/tests/data/: GCF_000005845.2_ASM584v2_genomic.partial.fna  sample.fna
simmrd/: Cargo.toml  readme.md
simmrd/src/: alignment.rs  cli.rs  main.rs  probability.rs
src/: lib.rs
