[package]
name = "simmrd"
description = "Generate distributions for simulating metagenomic short and long reads"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simmrd"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.2.11", features = ["cargo", "derive", "env"] }
hex = "0.4.3"
noodles = { version = "0.40.0", features = ["bam", "sam"] }
itertools = "0.10.3"
#noodles = { git = "https://github.com/genomicsoup/noodles.git", features = ["sam"] }
#noodles-sam = { git = "https://github.com/genomicsoup/noodles.git", features = ["async"] }
num-traits = "0.2.15"
tracing = "0.1.26"
tracing-subscriber = "0.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
serde = "1.0"
shared = { path = "../shared" }

[dev-dependencies]
